--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa"><img src="./eisenhower-matrix.jpg"><a class="more_inf" 
-    href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <div class="more_container">
+    <img src="./eisenhower-matrix.jpg">
+    <a class="more_container__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-     <p id="topSectionForAddingElementToList">
+  <div class="main_container">
+     <p>
        <label for="new-task">Add Item</label>
-       <div class="task-row-wrapper">
-         <input id="new-task"class="task" type="text">
+       <div class="task_wrapper">
+         <input id="new-task" class="task" type="text">
          <button>Add</button>
        </div>
      </p>
      <h3>Todo</h3>
-     <ul id="incompleteTasks">
+     <ul id="incomplete-tasks">
        <li><input type="checkbox">
          <label class="task">Pay Bills</label>
            <input type="text" class="task">
@@ -31,7 +32,7 @@
                <img src="./remove.svg">
            </button>
        </li>
-       <li class="editMode">
+       <li class="edit-mode">
          <input type="checkbox">
          <label class="task">Go Shopping</label>
          <input type="text" value="Go Shopping" class="task">
