--- a/index.html
+++ b/index.html
@@ -9,48 +9,49 @@
   rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="body">
   <div class="more_container">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="img" src="./eisenhower-matrix.jpg">
     <a class="more_container__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main_container">
      <p>
-       <label for="new-task">Add Item</label>
+       <label class="label" for="new-task">Add Item</label>
        <div class="task_wrapper">
          <input id="new-task" class="task" type="text">
-         <button>Add</button>
+         <button class="btn">Add</button>
        </div>
      </p>
-     <h3>Todo</h3>
-     <ul id="incomplete">
-       <li><input type="checkbox">
-         <label class="task">Pay Bills</label>
-           <input type="text" class="task">
-           <button class="edit">Edit</button>
-           <button class="delete">
-               <img src="./remove.svg">
-           </button>
+     <h3 class="list-title">Todo</h3>
+     <ul class="list" id="incomplete">
+       <li class="list-item">
+         <input class="input" type="checkbox">
+         <label class="task label">Pay Bills</label>
+         <input type="text" class="task input">
+         <button class="edit btn">Edit</button>
+         <button class="delete btn">
+           <img class="img" src="./remove.svg">
+         </button>
        </li>
-       <li class="edit-mode">
-         <input type="checkbox">
-         <label class="task">Go Shopping</label>
-         <input type="text" value="Go Shopping" class="task">
-         <button class="edit">Save</button>
-         <button class="delete">
-           <img src="./remove.svg">
+       <li class="edit-mode list-item">
+         <input class="input" type="checkbox">
+         <label class="task label">Go Shopping</label>
+         <input class="input" type="text" value="Go Shopping" class="task">
+         <button class="edit btn">Save</button>
+         <button class="delete btn">
+           <img class="img" src="./remove.svg">
          </button>
      </li>
      </ul>
-     <h3>Completed</h3>
-     <ul id="completed">
-       <li>
-         <input type="checkbox" checked>
-         <label class="task">See the Doctor</label>
-         <input type="text" class="task">
-         <button class="edit">Edit</button>
-         <button class="delete">
-           <img src="./remove.svg">
+     <h3 class="list-title">Completed</h3>
+     <ul id="completed" class="list">
+       <li class="list-item">
+         <input class="input" type="checkbox" checked>
+         <label class="task label">See the Doctor</label>
+         <input type="text" class="task input">
+         <button class="edit btn">Edit</button>
+         <button class="delete btn">
+           <img class="img" src="./remove.svg">
          </button>
        </li>
      </ul>
