--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="more_container">
-    <img class="img" src="./eisenhower-matrix.jpg">
+  <header class="more_container">
+    <img class="img" alt="eisenhower-matrix" src="./eisenhower-matrix.jpg">
     <a class="more_container__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main_container">
+  </header>
+  <main class="main_container">
      <p>
        <label class="label" for="new-task">Add Item</label>
        <div class="task_wrapper">
@@ -30,7 +30,7 @@
          <input type="text" class="task input">
          <button class="edit btn">Edit</button>
          <button class="delete btn">
-           <img class="img" src="./remove.svg">
+           <img class="img" alt="" src="./remove.svg">
          </button>
        </li>
        <li class="edit-mode list-item">
@@ -39,7 +39,7 @@
          <input class="input" type="text" value="Go Shopping" class="task">
          <button class="edit btn">Save</button>
          <button class="delete btn">
-           <img class="img" src="./remove.svg">
+           <img class="img" alt="" src="./remove.svg">
          </button>
      </li>
      </ul>
@@ -51,11 +51,11 @@
          <input type="text" class="task input">
          <button class="edit btn">Edit</button>
          <button class="delete btn">
-           <img class="img" src="./remove.svg">
+           <img class="img" alt="" src="./remove.svg">
          </button>
        </li>
      </ul>
-  </div>
+</main>
 <script src="app.js"></script>
 </body>
 </html>
