adjust HTML-formatting according to rule 1.2 in html-and-css-extended

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <input type="text" class="task input">
          <button class="edit btn">Edit</button>
          <button class="delete btn">
-           <img class="img" alt="" src="./remove.svg">
+           <img class="img" alt="remove" src="./remove.svg">
          </button>
        </li>
        <li class="edit-mode list-item">
@@ -39,7 +39,7 @@
          <input class="input" type="text" value="Go Shopping" class="task">
          <button class="edit btn">Save</button>
          <button class="delete btn">
-           <img class="img" alt="" src="./remove.svg">
+           <img class="img" alt="remove" src="./remove.svg">
          </button>
      </li>
      </ul>
@@ -51,7 +51,7 @@
          <input type="text" class="task input">
          <button class="edit btn">Edit</button>
          <button class="delete btn">
-           <img class="img" alt="" src="./remove.svg">
+           <img class="img" alt="remove" src="./remove.svg">
          </button>
        </li>
      </ul>
